tests/interpreter/binary-expression-divide-bad-types.stderr
error: cannot divide 'Number' by 'String'
 --> $DIR/binary-expression-divide-bad-types.lox:1:1
  |
1 | 10 / "foo";
  | ^^^^^^^^^^
